--- a/css/style.css
+++ b/css/style.css
@@ -1,211 +1,284 @@
-body{
-	margin: 0;
-	padding: 0;
-	font-family: Arial;
-}
-#menu{
-	position: relative;
-	background-color: #DDD;
-	width: 100%;
-	padding: 10px 5% 10px 5%;
+body,
+input
+{
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 14px;
 
-}
-#page_layout{
-	margin: auto;
-	position: relative;
-	background-color: #FFF;
-	width: 791px;
-	overflow: hidden;
-}
-#page_header{
-	padding: 10px;
-	text-align: center;
-	font-size: 20px;
-}
-#page_body{
-	float: left;
-	width: 651px;
-}
-#search{
-	background-color: #e3eaf5;
-}
-.clear{
-	clear: both;
-}
-ul{
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-li{
-	padding: 2px 5px 2px 5px;
-	cursor: pointer;
+    margin: 0;
+    padding: 0;
+
+    color: #555;
 }
 
-.box{
-	
+input,
+button
+{
+    outline: none;
 }
-a{
-	text-decoration: none;
-}
-a:hover{
-	color:inherit;
-}
-a:visited{
-	color:inherit;
-}
-ul.menu li{
-	display: inline;
-}
-ul.menu li:hover{
-	color: #00118F;
-}
-
-#user_login{
-	margin: 0;
-}
-
-
-
-
-
-.basic-grey {
-    margin-left:20px;
-    margin-right:20px;
-    max-width: 500px;
-    background: #F7F7F7;
-    padding: 25px 15px 25px 10px;
-    font: 12px Georgia, "Times New Roman", Times, serif;
-    color: #888;
-    text-shadow: 1px 1px 1px #FFF;
-    border:1px solid #E4E4E4;
-    border-radius: 5px;
-}
-
-.basic-grey input[type="text"], .basic-grey input[type="password"], .basic-grey textarea{
-    border: 1px solid #DADADA;
-    color: #888;
-    height: 30px;
-    margin-bottom: 16px;
-    margin-right: 6px;
-    outline: 0 none;
-    padding: 3px 3px 3px 5px;
+#menu
+{
+    box-sizing: border-box;
     width: 100%;
+    padding: 10px 5% 10px 5%;
+
+    background-color: #eaebeb;
+    box-shadow: 0 -3px 10px -5px #111 inset;
+}
+#page_layout
+{
+    position: relative;
+
+    overflow: hidden;
+
+    width: 791px;
+    margin: auto;
+
+    background-color: #fff;
+}
+#page_header
+{
+    font-size: 20px;
+
+    padding: 10px;
+
+    text-align: center;
+}
+#page_body
+{
+    float: left;
+
+    width: 651px;
+}
+.clear
+{
+    clear: both;
+}
+ul
+{
+    margin: 0;
+    padding: 0;
+
+    list-style-type: none;
+}
+li
+{
+    padding: 2px 5px 2px 5px;
+
+    cursor: pointer;
+}
+
+
+a
+{
+    text-decoration: none;
+}
+ul#menu li
+{
+    display: inline;
+}
+
+#menu a
+{
+    color: #0082e2;
+}
+#menu a:visited
+{
+    color: #0082e2;
+}
+#menu a:hover
+{
+    text-decoration: underline;
+
+    color: #0082e2;
+}
+
+#user_login
+{
+    margin: 0;
+}
+
+
+
+
+
+.basic-grey
+{
+    font: 12px Georgia, 'Times New Roman', Times, serif;
+
+    max-width: 500px;
+    margin-right: 20px;
+    margin-left: 20px;
+    padding: 25px 15px 25px 10px;
+
+    color: #888;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
+    background: #f7f7f7;
+    text-shadow: 1px 1px 1px #fff;
+}
+
+.basic-grey input[type='text'],
+.basic-grey input[type='password'],
+.basic-grey textarea
+{
     font-size: 12px;
-    line-height:15px;
-    box-shadow: inset 0px 1px 4px #ECECEC;
-    -moz-box-shadow: inset 0px 1px 4px #ECECEC;
-    -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
-    box-sizing:border-box;
+    line-height: 15px;
+
+    box-sizing: border-box;
+    width: 100%;
+    height: 30px;
+    margin-right: 6px;
+    margin-bottom: 16px;
+    padding: 3px 3px 3px 5px;
+
+    color: #888;
+    border: 1px solid #dadada;
     border-radius: 3px;
+    outline: 0 none;
+    -webkit-box-shadow: inset 0 1px 4px #ececec;
+       -moz-box-shadow: inset 0 1px 4px #ececec;
+            box-shadow: inset 0 1px 4px #ececec;
 }
-.basic-grey input[type="text"], .basic-grey input[type="password"]{
-	padding-left:15px;
-	outline:none;
+.basic-grey input[type='text'],
+.basic-grey input[type='password']
+{
+    padding-left: 15px;
+
+    outline: none;
 }
-.basic-grey input[type="text"]:hover, .basic-grey input[type="password"]:hover{
-	border: 1px solid #939BF6;
+.basic-grey input[type='text']:hover,
+.basic-grey input[type='password']:hover
+{
+    border: 1px solid #939bf6;
 }
-.basic-grey textarea{
+.basic-grey textarea
+{
     padding: 5px 3px 3px 5px;
 }
-.basic-grey textarea{
-    height:100px;
+.basic-grey textarea
+{
+    height: 100px;
 }
-.basic-grey .button {
-    background: #6DACFE;
-    border: none;
-    padding: 10px 25px 10px 25px;
-    color: #FFF;
-    box-shadow: 1px 1px 5px #B6B6B6;
-    border-radius: 3px;
-    text-shadow: 1px 1px 1px #9E3F3F;
-    cursor: pointer;
-    width:100%;
-    box-sizing:border-box;
+
+.basic-grey .button
+{
+    box-sizing: border-box;
+    width: 100%;
     margin-bottom: 16px;
-    transition:1s;
-    outline:none;ы
-}
-.basic-grey a{
-	text-align: center;
-	font-family: "PT Sans", sans-serif;
-	text-decoration: underline;
-}
-.basic-grey .button:hover {
-	background-color: rgba(109,172,254,0.85);
-}
+    padding: 10px 25px 10px 25px;
 
+    cursor: pointer;
+    transition: 1s;
 
-/* - - - - - - - - - - - - - - - -  - -*/
-.basic-grey.reg{
-	background:none;
-	border:none;
-	margin-left:auto;
-	margin-right: auto;
-}
-.reg input[type="text"], .reg input[type="password"], .reg .button{
-	width:300px;
-	margin-left:100px;
-	margin-right: 100px;
-	height:45px;
-	margin-top:0px;
-	margin-bottom:20px;
-}
-/* - - - - - - - - - - - - - - - -  - -*/
-/* - - - - - - - - - - - - - - - -  - -*/
-/* - - - - - - - - - - - - - - - -  - -*/
-/* - - - - - - - - - - - - - - - -  - -*/
-/* - - - - - - - - - - - - - - - -  - -*/
-#overlay {
-top: 0;
-right: 0;
-bottom: 0;
-left: 0;
-z-index: 1;/* фон затемнения */
-background-color: rgba(0, 0, 0, 0.7);
-position: fixed; /* фиксированное поцизионирование */
-cursor: default; /* тип курсара */
--webkit-transition: opacity .5s;
--moz-transition: opacity .5s;
--ms-transition: opacity .5s;
--o-transition: opacity .5s;
-transition: opacity .5s;
-padding-top: 15%;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    background: #6dacfe;
+    box-shadow: 1px 1px 5px #b6b6b6;
+    text-shadow: 1px 1px 1px #9e3f3f;
 }
 
-.popup {
-z-index: 10;
-display: block;
-margin: 0 auto;
+.basic-grey a
+{
+    font-family: 'PT Sans', sans-serif;
 
-/* фиксированное позиционирование, окно стабильно при прокрутке */
-position: relative;
-border: 1px solid #383838;
-/* скругление углов */
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
--ms-border-radius: 4px;
-border-radius: 4px;
-background-color: #FFFFFF;
-/* внешняя тень */
--webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
--moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
--ms-box-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
--o-box-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8);
+    text-align: center;
+    text-decoration: underline;
+}
+.basic-grey .button:hover
+{
+    background-color: rgba(109,172,254,.85);
+}
 
-/* эффект перехода (появление) */
--webkit-transition: all ease .5s;
--moz-transition: all ease .5s;
--ms-transition: all ease .5s;
--o-transition: all ease .5s;
-transition: all ease .5s;
 
-	width: 250px;
-	padding: 0;
-	background-color: none;
+/* - - - - - - - - - - - - - - - -  - -*/
+.basic-grey.reg
+{
+    margin-right: auto;
+    margin-left: auto;
+
+    border: none;
+    background: none;
+}
+.reg input[type='text'],
+.reg input[type='password'],
+.reg .button
+{
+    width: 300px;
+    height: 45px;
+    margin-top: 0;
+    margin-right: 100px;
+    margin-bottom: 20px;
+    margin-left: 100px;
+}
+/* - - - - - - - - - - - - - - - -  - -*/
+/* - - - - - - - - - - - - - - - -  - -*/
+/* - - - - - - - - - - - - - - - -  - -*/
+/* - - - - - - - - - - - - - - - -  - -*/
+/* - - - - - - - - - - - - - - - -  - -*/
+#overlay
+{
+    position: fixed; /* фиксированное поцизионирование */
+    z-index: 1;/* фон затемнения */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    padding-top: 15%;
+
+    cursor: default; /* тип курсара */
+    -webkit-transition: opacity .5s;
+       -moz-transition: opacity .5s;
+        -ms-transition: opacity .5s;
+         -o-transition: opacity .5s;
+            transition: opacity .5s;
+
+    background-color: rgba(0, 0, 0, .7);
+}
+
+.popup
+{
+    /* фиксированное позиционирование, окно стабильно при прокрутке */
+    position: relative;
+    z-index: 10;
+
+    display: block;
+
+    width: 250px;
+    margin: 0 auto;
+    padding: 0;
+    /* эффект перехода (появление) */
+
+    -webkit-transition: all ease .5s;
+       -moz-transition: all ease .5s;
+        -ms-transition: all ease .5s;
+         -o-transition: all ease .5s;
+            transition: all ease .5s;
+
+    border: 1px solid #383838;
+    /* скругление углов */
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    background-color: #fff;
+    background-color: none;
+    /* внешняя тень */
+    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, .8);
+       -moz-box-shadow: 0 0 6px rgba(0, 0, 0, .8);
+            box-shadow: 0 0 6px rgba(0, 0, 0, .8);
+
+        -ms-border-radius: 4px;
+        -ms-box-shadow: 0 0 6px rgba(0, 0, 0, .8);
+         -o-box-shadow: 0 0 6px rgba(0, 0, 0, .8);
 }
 
 /* - - - - - - - - - - - - - - - -  - -*/
 /* - - - - - - - - - - - - - - - -  - -*/
+
+
+.right
+{
+    float: right;
+}
